# dungeon-feature

./: .gitignore  CLAUDE.md  Cargo.toml  REVIEW.md
src/: config.rs  lib.rs  main.rs  states.rs
src/components/: combat.rs  dungeon.rs  enemy.rs  hud.rs  item.rs  mod.rs  player.rs  ui.rs
src/events/: combat.rs  item.rs  mod.rs
src/plugins/: camera.rs  combat.rs  core.rs  dungeon.rs  enemy.rs  feedback.rs  hud.rs  inventory.rs  item.rs  menu.rs  mod.rs  player.rs  transfer.rs
src/resources/: bsp.rs  dungeon.rs  font.rs  mod.rs  player_state.rs  sprite_assets.rs  transfer_state.rs
tools/sprite-gen/: Cargo.toml
tools/sprite-gen/src/: error.rs  main.rs  manifest.rs  postprocess.rs  prompt.rs
tools/sprite-gen/src/provider/: mod.rs  openai.rs  openrouter.rs
