[package]
name = "sprite-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
rig-core = { version = "0.31.0", features = ["image"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
image = "0.25.5"
base64 = "0.22.1"
thiserror = "2.0.12"
indicatif = "0.17.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
